# otus

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
.github/workflows/: cmake.yml  linux.yaml
test_package/: CMakeLists.txt  conanfile.py
